--- a/style/3-1produst.css
+++ b/style/3-1produst.css
@@ -9,7 +9,7 @@ body{
 }
 .wrapper{
     width: 100%;
-    min-width: 1160px;
+   
     margin: 0 auto;
 }
 h1{
@@ -22,7 +22,9 @@ h3{
     font-size: 18px;
 }
 /* ------section1 block----- */
-
+.section1{
+    overflow: hidden;
+}
 /* ------section2 block----- */
 .section2{
     background-color: #B1B9A3;
@@ -206,7 +208,8 @@ text-align: center;
     
 }
 .section3 .pics img{
-    width: 650px;
+    max-width: 650px;
+    width: 100%;
     display: block;
     margin: 0 auto ;
 }
@@ -299,4 +302,89 @@ text-align: center;
   .tab-content.current p{
       padding-bottom: 20px;
   }
+ 
   
+  /* ===============  RWD  ================== */
+@media (max-width:714px){
+    .section2{
+        flex-direction: column;
+     }
+     .s-right{
+         max-width: 450px;
+         width: 100%;
+         margin: 0 auto;
+     }
+     .section2 .woodboard{
+         margin: 0 auto;
+         display: inline-flex;
+     }
+     .section2 .woodboard a {
+         margin: 0 15px;
+     }
+    .section4 .maylike ul {
+        flex-wrap: wrap;
+    }
+    .section3 .text {
+        width: 100%;
+        flex-direction: column;
+    }
+    .section3 .t-left {
+        max-width: 340px;
+        margin: 0 auto;
+    }
+    .section3 .t-right {
+        max-width: 340px;
+        margin: 0 auto;
+    }
+    
+}
+@media (min-width:715px) and (max-width:849px){
+    .section2{
+        flex-direction: column;
+     }
+     .s-right{
+         max-width: 450px;
+         width: 100%;
+         margin: 0 auto;
+     }
+     .section2 .woodboard{
+         margin: 0 auto;
+         display: inline-flex;
+     }
+     .section2 .woodboard a {
+         margin: 0 15px;
+     }
+    .section4 .maylike ul {
+        flex-wrap: wrap;
+    }
+    .section3 .text {
+        width: 100%;
+    }
+    .section3 .t-left {
+        max-width: 340px;
+        margin-left: 20px;
+    }
+    .section3 .t-right {
+        max-width: 340px;
+        margin-right: 20px;
+    }
+}
+
+@media (min-width:850px) and (max-width:1040px){
+    .section2{
+       flex-direction: column;
+    }
+    .s-right{
+        max-width: 450px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .section2 .woodboard{
+        margin: 0 auto;
+        display: inline-flex;
+    }
+    .section2 .woodboard a {
+        margin: 0 15px;
+      
+    }
+  }
