--- a/style/shop.css
+++ b/style/shop.css
@@ -88,7 +88,7 @@ h2{
     .productboard .out a {
         margin: 0 2px;
     }
-    .productboard .top {
+    .section2 .productboard .top {
         justify-content: center;
     }
     .productboard .top .select {
