--- a/style/shop.css
+++ b/style/shop.css
@@ -1,8 +1,8 @@
 @import url('../style/reset.css');
 
-*{
+/* *{
     outline: 1px solid pink;
-}
+} */
 
 body{
     width: 100%;
@@ -23,12 +23,10 @@ h2{
     font-size: 18px;
 }
 /* ------section1 block----- */
-.section1{
-    overflow: hidden;
-}
+
 /* ------section2 block----- */
 .section2{
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   background-color: #8D9A7B;
   width: 100%;
   min-width: 1080px;
@@ -47,7 +45,7 @@ h2{
     flex-wrap: wrap;
     padding-top: 20px;
     margin-right: 45px;
-    outline: 1px solid blue;
+    /* outline: 1px solid blue; */
 }
 .section2 .woodboard a{
     text-decoration: none;
@@ -240,3 +238,87 @@ h2{
         min-width: 1080px;
     }
 }
+
+
+
+/* ========= nav bar ========= */
+
+    /* ====== inside-menu ===== */
+    .nav{
+        position: relative;
+    }
+    ul.inside-menu{
+        /* display: block; */
+        width: 40%;
+        position: absolute;
+        right: 0px;
+        top: 144px;
+        background-color: #E2CFA9;
+        opacity: .8;
+        transition: .8s;
+        z-index: 33;
+        animation: change 0.3s ease-in;
+    }
+    @keyframes change {
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: .8;
+        }
+    
+    }
+    
+    ul.inside-menu li{
+        height: 50px;
+    }
+    ul.inside-menu li a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 50px;
+        border-bottom: 1px solid #fce8c3;
+    }
+    .nav .inside-menu .btn{
+        position: relative;   
+    }
+    .nav .inside-menu .btn1 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .inside-menu .btn2 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .inside-menu .btn3 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .btn:hover i, .nav .btn.active i{
+        opacity: 1;
+    } 
+    
+    @media (max-width:990px){
+        .nav ul.menu{
+            display: none;
+        }
+        .nav .hamburger{
+            display: block;
+        }
+    }
+    @media (min-width:991px){
+        .nav .hamburger{
+            display: none;
+        }
+        .nav .media_none{
+            display: none;
+        }
+    }
+    
