--- a/style/storeroom_copy.css
+++ b/style/storeroom_copy.css
@@ -1,7 +1,7 @@
 @import url('/style/reset.css');
-*{
+/* *{
     box-sizing: border-box;
-}
+} */
 
 body{
     width: 100%;
@@ -25,9 +25,7 @@ h3{
     font-size: 18px;
 }
 /* ------section1 block----- */
-.section1{
-    overflow: hidden;
-}
+
 /* ------section2 block----- */
 .section2{
     background-color: #8D9A7B;
@@ -315,3 +313,91 @@ h3{
 /* .s-right .box4{
     border:1px solid pink;
 } */
+
+
+
+
+/* ========= nav bar ========= */
+
+    /* ====== inside-menu ===== */
+    .nav{
+        position: relative;
+    }
+    ul.inside-menu{
+        /* display: block; */
+        width: 40%;
+        position: absolute;
+        right: 0px;
+        top: 144px;
+        background-color: #E2CFA9;
+        opacity: .8;
+        transition: .8s;
+        z-index: 33;
+        animation: change 0.3s ease-in;
+    }
+    @keyframes change {
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: .8;
+        }
+    
+    }
+    
+    ul.inside-menu li{
+        height: 50px;
+    }
+    ul.inside-menu li a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 50px;
+        border-bottom: 1px solid #fce8c3;
+    }
+    .nav .inside-menu .btn{
+        position: relative;   
+    }
+    .nav .inside-menu .btn1 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .inside-menu .btn2 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .inside-menu .btn3 i{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        opacity: 0;
+    }
+    .nav .btn:hover i, .nav .btn.active i{
+        opacity: 1;
+    } 
+    
+    @media (max-width:990px){
+        .nav ul.menu{
+            display: none;
+        }
+        .nav .hamburger{
+            display: block;
+        }
+    }
+    @media (min-width:991px){
+        .nav .hamburger{
+            display: none;
+        }
+        .section1 .nav .media_none{
+            display: none;
+        }
+        .nav .inside-menu{
+            display: none;
+        }
+    }
+    
