--- a/style/story.css
+++ b/style/story.css
@@ -1,6 +1,6 @@
 @import url('../style/reset.css');
 
-*{outline: 1px solid red;}
+/* *{outline: 1px solid red;} */
 
 
 body{
@@ -25,13 +25,12 @@ h2{
 /* ------section1 block----- */
 .section1{
     background-color:   #E2CFA9; 
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .container{
     width: 100%;
     height: 100%;
     clear: both;
-
 }
 .container img{
     display: block;
@@ -39,6 +38,16 @@ h2{
 }
 .section1 .slick-block{
     cursor: pointer;
+}
+.slick-block .slick-dots {
+    position: relative;
+    bottom: 0px;
+    display: block;
+    background-color: #E2CFA9;
+    padding-bottom: 15px;
+}
+.slick-dotted.slick-slider {
+    margin-bottom: 0px;
 }
 /* ------section2 block----- */
 .section2{
@@ -61,10 +70,11 @@ h2{
     width: 100%;
     display: block;
 }
-
 .section2 .cover h1{
    margin-bottom: 10px;
 }
+
+
 @media (max-width:575px ){
     .section2{
         background-attachment: cover;
