--- a/style/web-commed.css
+++ b/style/web-commed.css
@@ -7,6 +7,7 @@
     background-color: #E2CFA9;
     padding: 25px 30px 20px;
     /* box-sizing: border-box; */
+    
 
 }
 .nav .logo1{
@@ -78,12 +79,6 @@
     float: right;
 }
 
-@media screen and (max-width:575px ){
-    .nav .logo1{
-        max-width: 60px;
-        width: 100%;
-    }
-}
 
 
 /*  ............ 下拉選單 ............ */
@@ -118,15 +113,18 @@ ul.shop-list{
 .nav .select ul.shop-list a:hover{
     color:#8D9A7B;
 } */
-/*  ............ 漢堡選單 ............ */
-.nav{
+
+
+/*  ============== 漢 堡 選 單 ============== */
+
+/* .nav{
     position: relative;
 }
 #menu-control{
     position: absolute;
     left: -50px;
     z-index: -2;
-    /* 讓他移出畫面 */
+    
 }
 .nav .hamburger{
     display: inline-block;
@@ -144,7 +142,7 @@ ul.shop-list{
     height: 1px;
     display: block;
     overflow: hidden;
-    /* 以防萬一他露出來*/
+    
 }
 .hamburger::before{
     content: "";
@@ -152,7 +150,7 @@ ul.shop-list{
     height: 3px;
     width: 35px;
     background-color: rgb(0, 0, 0);
-    /* 讓他置中 */
+  
     top: 0;
     bottom: 0;
     margin: auto;
@@ -162,9 +160,9 @@ ul.shop-list{
 }
 .inside-menu{
     display: none;
-}
+} */
 
-@media(max-width:991px){
+/* @media(max-width:991px){
     .nav .hamburger{
         display: inline-block;
     }
@@ -198,9 +196,7 @@ ul.shop-list{
     }
     .nav ul.menu{
         display: none;
-
     }
-    
     .nav .inside-menu .btn{
         position: relative;   
     }
@@ -230,10 +226,105 @@ ul.shop-list{
     ul.inside-menu{
         top: 120px;
     }
+    .nav .logo1{
+        max-width: 60px;
+        width: 100%;
+    }
+}
+ */
+
+.nav .hamburger{
+    display: inline-block;
+    float: right;
+    margin-right: -25px;
+    margin-top: 32px;
+    padding: 5px
 }
 
+.nav .hamburger-inner, .nav .hamburger-inner:after, .nav .hamburger-inner:before {
+    position: absolute;
+    width: 33px;
+}
+.nav .hamburger--collapse .hamburger-inner {
+    top: 25.2px;
+    bottom: 0px;
+    left: 3.2px;
+}
+/* ====== inside-menu ===== */
+.nav{
+    position: relative;
+}
+ul.inside-menu{
+    /* display: block; */
+    width: 40%;
+    position: absolute;
+    right: 0px;
+    top: 144px;
+    background-color: #E2CFA9;
+    opacity: .8;
+    transition: .8s;
+    z-index: 33;
+    animation: change 0.3s ease-in;
+}
+@keyframes change {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: .8;
+    }
 
+}
 
+ul.inside-menu li{
+    height: 50px;
+}
+ul.inside-menu li a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 50px;
+    border-bottom: 1px solid #fce8c3;
+}
+.nav .inside-menu .btn{
+    position: relative;   
+}
+.nav .inside-menu .btn1 i{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    opacity: 0;
+}
+.nav .inside-menu .btn2 i{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    opacity: 0;
+}
+.nav .inside-menu .btn3 i{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    opacity: 0;
+}
+.nav .btn:hover i, .nav .btn.active i{
+    opacity: 1;
+} 
+
+@media (max-width:990px){
+    .nav ul.menu{
+        display: none;
+    }
+    .nav .hamburger{
+        display: block;
+    }
+}
+@media (min-width:991px){
+    .nav .hamburger{
+        display: none;
+    }
+}
 
 
 
@@ -271,6 +362,7 @@ ul.shop-list{
 .box-right-block a .line{
     transform: translateY(2px);
 }
+
 @media screen and (max-width:575px ){
     .footer .box-left img{
         height: 100%;
