--- a/style/outpatient.css
+++ b/style/outpatient.css
@@ -73,7 +73,7 @@ h2{
 }
 @media (max-width:575px ){
     .section2{
-        background-attachment: cover;
+        background-attachment: initial;
         background-size: cover;
     }
 }
