--- a/style/outpatient.css
+++ b/style/outpatient.css
@@ -22,7 +22,7 @@ h2{
 /* ------section1 block----- */
 .section1{
     background-color:   #E2CFA9; 
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .container{
     width: 100%;
