--- a/style/storeroom_copy.css
+++ b/style/storeroom_copy.css
@@ -68,7 +68,6 @@ h3{
     margin: 0 auto;
     background-color: #E2CFA9;
     border: 2px solid #8D9A7B;
-    overflow-x: scroll;
     /* border:1px solid red; */
 }
 .section2 .s-right .box{
@@ -127,13 +126,14 @@ h3{
 .s-right .box2 .b2-2{
     background-image: url(../img/03storeroom/pic01.png);
     width: 320px;
-    height: 458px;
+    height: 455px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
 }
 .s-right .box2 .b2-3{
     border-top: 2px solid #8D9A7B;
+    line-height: 57px;
 }
 /* ......................box3..................... */
 
@@ -165,7 +165,7 @@ h3{
 /* ......................box3-1..................... */
 .s-right .box3 .b3-1{
     /* display: flex; */
-    height: 51%;
+    height: 50%;
     border-bottom: 2px solid #8D9A7B;
     box-sizing: border-box;
 }
@@ -195,7 +195,7 @@ h3{
     top:50%;
     left:50%;
     transform: translate(-50%, -50%); */
-    line-height: 75px;
+    line-height: 70px;
 }
 
 .s-right .box3 .b3-1 li.list1-3{
@@ -212,33 +212,19 @@ h3{
 .s-right .box3 .b3-1 li.list1-4 h1{
     line-height: 75px;
 }
-
-.s-right .box3 .b3-2{
-    border-bottom: 2px solid #8D9A7B;
-}
-
-.box3  .b3-2 .list2-1, .list2-2, .list2-4, .list3-4{
-    line-height: 100px;
-}
-.box3  .b3-2 .list2-3, .list2-5, .list3-3, .list3-5{
-    line-height: 50px;
-}
-.s-right .box3 .b3-3{
-    border-bottom: 2px solid #8D9A7B;
-}
-
 /* ......................box3-2..................... */
 .s-right .box3 .b3-2{
     height: 20%;
     border-bottom: 2px solid #8D9A7B;
+    box-sizing: border-box;
 }
 
 .s-right .box3 li.list2-1{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
 }
 .s-right .box3 li.list2-2{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
 }
 
@@ -247,22 +233,29 @@ h3{
     border-right: 2px solid #8D9A7B;
 }
 .s-right .box3 li.list2-4{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
 }
 .s-right .box3 li.list2-5{
     width: 50px;
     
 }
+.box3  .b3-2 .list2-1, .list2-2, .list2-4, .list3-4{
+    line-height: 100px;
+}
+.box3  .b3-2 .list2-3, .list2-5, .list3-3, .list3-5{
+    line-height: 50px;
+}
 /* ......................box3-3..................... */
 .s-right .box3 .b3-3{
     border-bottom: 2px solid #8D9A7B;
-    height: 19.5%;
+    height: 20%;
+    box-sizing: border-box;
     /* text-align: center; */
 }
 
 .s-right .box3 li.list3-1{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
     position: relative;
 }
@@ -274,7 +267,7 @@ h3{
     transform: translate(-50%, -50%); 
 }
 .s-right .box3 li.list3-2{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
     position: relative;
 }
@@ -291,7 +284,7 @@ h3{
     border-right: 2px solid #8D9A7B;
 }
 .s-right .box3 li.list3-4{
-    width: 100px;
+    width: 98px;
     border-right: 2px solid #8D9A7B;
 }
 .s-right .box3 li.list3-5{
@@ -301,11 +294,12 @@ h3{
 .s-right .box3 .b3-4{
     writing-mode:horizontal-tb;
     height: 10%;
+    box-sizing: border-box;
     
 }
 .s-right .box3 .b3-4 p{
     text-align: center;
-    line-height: 50px;
+    line-height: 57px;
     width: 400px;
 }
 
@@ -388,6 +382,9 @@ h3{
         .nav .hamburger{
             display: block;
         }
+        .section2 .s-right{
+            overflow-x: scroll;
+        }
     }
     @media (min-width:991px){
         .nav .hamburger{
@@ -399,5 +396,6 @@ h3{
         .nav .inside-menu{
             display: none;
         }
+        
     }
     
